--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-    "name": "edvinaskrucas/notification",
+    "name": "martijnimhoff/notification",
     "keywords": ["laravel", "notifications", "messages", "flash", "instant"],
     "description": "Package for Laravel for helping to manage flash / instant notifications / messages.",
+    "version": "5.2.1",
     "authors": [
         {
             "name": "Edvinas Kručas",
