--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
         {
             "name": "Edvinas Kručas",
             "email": "edv.krucas@gmail.com"
+        },
+        {
+            "name": "Martijn Imhoff",
+            "email": "info@martijnimhoff.nl"
         }
     ],
     "license": "MIT",
